--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,15 @@ email: yourname (at) example.edu
 keywords: minimal light
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light-theme.yliu.me/
+remote_theme: yaoyao-liu/minimal-light
+
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
-linkedin: https://www.linkedin.com/
+google_scholar: https://scholar.google.de/citations?user=rKgTTh8AAAAJ&hl=en
+cv_link: https://drive.google.com/file/d/1XatB-C8355oITVR3eg9RxZO616INAmSH/view?usp=share_link
+github_link: https://github.com/JulienSiems
+linkedin: https://www.linkedin.com/in/julien-niklas-siems/
 twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
