--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
 # Basic Information 
-title: Your Name
+title: Julien Siems
 position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+affiliation: University of Freiburg
+email: siemsj@cs.uni-freiburg.de
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: minimal light
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light-theme.yliu.me/
-remote_theme: yaoyao-liu/minimal-light
-
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
