--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ google_scholar: https://scholar.google.de/citations?user=rKgTTh8AAAAJ&hl=en
 cv_link: https://drive.google.com/file/d/1XatB-C8355oITVR3eg9RxZO616INAmSH/view?usp=share_link
 github_link: https://github.com/JulienSiems
 linkedin: https://www.linkedin.com/in/julien-niklas-siems/
-twitter: https://twitter.com/
+twitter: https://twitter.com/juliensiems
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
