--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,12 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
+  - title: "Curve Your Enthusiasm: Concurvity Regularization in Differentiable Generalized Additive Models"
+    authors: Julien Siems*, Konstantin Ditschuneit*, Winfried Ripken*, Alma Lindborg*, Maximilian Schambach, Johannes S. Otterbach, Martin Genzel (*equal contribution)
+    conference_short: NeurIPS
+    conference: Neural Information Processing Systems 2023
+    pdf: https://arxiv.org/pdf/2305.11475.pdf
+    code: https://github.com/merantix-momentum/concurvity-regularization
+    image: ./assets/img/teaser_concurvity.png
 
   - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
     authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
