--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Julien Siems
-position: Ph.D. Student
+position: PhD Student
 affiliation: University of Freiburg
 email: siemsj@cs.uni-freiburg.de
 
