--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.de/citations?user=rKgTTh8AAAAJ&hl=en
-cv_link: https://drive.google.com/file/d/1XatB-C8355oITVR3eg9RxZO616INAmSH/view?usp=share_link
+cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/JulienSiems
 linkedin: https://www.linkedin.com/in/julien-niklas-siems/
 twitter: https://twitter.com/julien_siems
