fix title of preprint.

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "Is Mamba Capable of In-Context Learning"
+  - title: "Is Mamba Capable of In-Context Learning?"
     authors: Riccardo Grazzi*, Julien Siems*, Simon Schrodi, Thomas Brox, Frank Hutter(*equal contribution)
     conference_short: Preprint
     conference: Preprint under review
