--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@ main:
   - title: "Is Mamba Capable of In-Context Learning?"
     authors: Riccardo Grazzi*, Julien Siems*, Simon Schrodi, Thomas Brox, Frank Hutter (*equal contribution)
     conference_short: ME-FoMo@ICLR
-    conference: ICLR 2024 Workshop on Mathematical and Empirical Understanding of Foundation Models (ME-FoMo)
+    conference: ICLR 2024 Workshop on Mathematical and Empirical Understanding of Foundation Models (ME-FoMo) and AutoML Conference 2024
     pdf: https://arxiv.org/pdf/2402.03170.pdf
     image: ./assets/img/teaser_mamba_icl.png
 
