--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 main:
   - title: "GAMformer: In-Context Learning for Generalized Additive Models"
     authors: Andreas Müller*, Julien Siems*, Harsha Nori, David Salinas, Arber Zela, Rich Caruana, Frank Hutter (*equal contribution)
-    conference_short: arxiv
+    conference_short: TRL@NeurIPS
     conference: arxiv
     pdf: https://arxiv.org/pdf/2410.04560
     image: ./assets/img/teaser_gamformer.jpg
