--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,14 @@
 main:
   - title: "Mamba4Cast: Efficient Zero-Shot Time Series Forecasting with State Space Models"
     authors: Sathya Kamesh Bhethanabhotla*, Omar Swelam*, Julien Siems, David Salinas, Frank Hutter (*equal contribution)
-    conference_short: TS@NeurIPS
+    conference_short: TS@NeurIPS (Spotlight)
     conference: NeurIPS Workshop on Time Series in the Age of Large Models (Spotlight)
     pdf: https://arxiv.org/abs/2410.09385
     image: ./assets/img/teaser_mamba4cast.png
 
   - title: "GAMformer: In-Context Learning for Generalized Additive Models"
     authors: Andreas Müller*, Julien Siems*, Harsha Nori, David Salinas, Arber Zela, Rich Caruana, Frank Hutter (*equal contribution)
-    conference_short: TRL@NeurIPS
+    conference_short: TRL@NeurIPS, Interpretability@NeurIPS (Oral)
     conference: NeurIPS Workshop on Tabular Representation Learning
     pdf: https://arxiv.org/pdf/2410.04560
     image: ./assets/img/teaser_gamformer.jpg
