--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -8,8 +8,8 @@ main:
 
   - title: "GAMformer: In-Context Learning for Generalized Additive Models"
     authors: Andreas Müller*, Julien Siems*, Harsha Nori, David Salinas, Arber Zela, Rich Caruana, Frank Hutter (*equal contribution)
-    conference_short: TRL@NeurIPS, Interpretability@NeurIPS (Oral)
-    conference: NeurIPS Workshop on Tabular Representation Learning
+    conference_short: Interpretability@NeurIPS (Oral)
+    conference: NeurIPS Workshop on Interpretable AI Past, Present and Future
     pdf: https://arxiv.org/pdf/2410.04560
     image: ./assets/img/teaser_gamformer.jpg
 
