--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,7 +3,7 @@ main:
     authors: Riccardo Grazzi, Julien Siems, Jörg Franke, Arber Zela, Frank Hutter, Massimiliano Pontil
     conference_short: M3L@NeurIPS (Oral)
     conference: NeurIPS Workshop on Mathematics of Modern Machine Learning Workshop (Oral)
-    pdf: https://openreview.net/pdf?id=EXGAodFkQX
+    pdf: https://arxiv.org/pdf/2411.12537
     image: ./assets/img/teaser_negative_eigenvalues.jpg
 
   - title: "GAMformer: In-Context Learning for Generalized Additive Models"
